--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -184,7 +184,7 @@ h1, h2, h3, h4
 
 h4
   margin-bottom: 0px
-  line-height: 25px
+  line-height: 24px
 
 // Did this to help out Equipment etc sections for now; may want it everywhere but we weren't
 // sure what other h4's might be negatively affected
@@ -1501,6 +1501,9 @@ csingredienteditpair
   .popup-bottom
     h3
       font-size: 16px
+
+  .static-height
+    height: 10px
 
 @media (max-width: 320px)
   .popup-bottom
