--- a/app/views/courses/_spherification_a.html.haml
+++ b/app/views/courses/_spherification_a.html.haml
@@ -77,7 +77,7 @@
       %h2 The Creative Kit
       = Course::SPHERIFICATION_CREATIVE[:copy]
       .well.section
-        = buy_now(Course::SPHERIFICATION_CREATIVE[:variant_id])
+        = buy_now(Course::SPHERIFICATION_CREATIVE[:variant_id], Course::SPHERIFICATION_CREATIVE[:price])
 
 
 %hr
@@ -100,7 +100,7 @@
       %h2 The Enthusiast Kit
       = Course::SPHERIFICATION_ENTHUSIAST[:copy]
       .well.section
-        = buy_now(Course::SPHERIFICATION_ENTHUSIAST[:variant_id])
+        = buy_now(Course::SPHERIFICATION_ENTHUSIAST[:variant_id], Course::SPHERIFICATION_ENTHUSIAST[:price])
 
 %hr
 .container
@@ -122,7 +122,7 @@
       %h2 The Professional Kit
       = Course::SPHERIFICATION_PROFESSIONAL[:copy]
       .well.section
-        = buy_now(Course::SPHERIFICATION_PROFESSIONAL[:variant_id])
+        = buy_now(Course::SPHERIFICATION_PROFESSIONAL[:variant_id], Course::SPHERIFICATION_PROFESSIONAL[:price])
 
 - if bio_chris && bio_grant
   .container
