--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -405,6 +405,11 @@ h4
     .step-video
       display: none
 
+.edit-mode
+  .ordered-steps
+    overflow: visible
+    border: none
+
 
 .ingredients
 
@@ -1215,7 +1220,12 @@ csingredienteditpair
   margin-top: -5px
 
 .step-edit-buttons
+  position: absolute
+  width: 50px
+  top: 6px
+  left:  -24px
   button
+    width: 24px
     margin-top: 4px
     line-height: 16px
     font-size: 14px
