fix step kg ingredients

--- a/app/views/activities/_old_ingredient_row.html.haml
+++ b/app/views/activities/_old_ingredient_row.html.haml
@@ -19,5 +19,5 @@
   %td.quantity-group.qtyfade
     .lbs-qty
     .lbs-label
-    .main-qty{data: {:"orig-value" => ingredient.display_quantity}}= ingredient.display_quantity
+    .main-qty{data: {:"orig-value" => ingredient.display_quantity.to_f * ((ingredient.unit == "kg") ? 1000 : 1)}}= ingredient.display_quantity
   %td.unit.qtyfade= ingredient.unit
