[spherification] updated the split pages w/ extra paragraph text; minor tweak of syntax for buy_now helper

--- a/app/views/courses/_spherification_c.html.haml
+++ b/app/views/courses/_spherification_c.html.haml
@@ -32,6 +32,29 @@
 
 .container
   .row.section
+    .span8.offset2
+      %h2 Be more creative in your kitchen
+      %p In this short-course, you will learn all three techniques, starting with reverse spherification, which is surprisingly easy. The course then teaches you the helpful refinement of this technique, called frozen-reverse spherification. Finally, you'll master the more challenging technique of direct spherification. At the end of the course, you will have the opportunity to demonstrate your proficiency with these techniques and also prove your understanding of why spherification works to certify that you've mastered this popular modernist technique.
+  .row.section
+    .span4
+      =image_tag 'https://www.filepicker.io/api/file/RY0MPYKRRkOLpCNqGZpN'
+      .text-center
+        %h4 Reverse Spherification
+        
+    .span4
+      =image_tag 'https://www.filepicker.io/api/file/BwIi8kdRFGLEIWaWcXPI'
+      .text-center
+        %h4 Frozen Reverse Spherification
+        
+    .span4
+      =image_tag 'https://www.filepicker.io/api/file/PFUrsvzWReCkVxlMGXBG'
+      .text-center
+        %h4 Direct Spherification
+        
+%hr
+
+.container
+  .row.section
     .span11.offset1
       %h3.orange= "The Creative Kit"
   .row.section
