--- a/app/assets/stylesheets/courses.css.sass
+++ b/app/assets/stylesheets/courses.css.sass
@@ -55,7 +55,7 @@
     .active-module
       font-weight: bold
 
-.course-nav-modules.affix
+.course-side-bar.affix
   top: 60px
 
 .course-nav-side
@@ -117,7 +117,7 @@
   bottom: 0
 
 @media (min-width: 1200px)
-  .course-nav-modules
+  .course-side-bar
     width: 270px
 
   .static-height
@@ -128,24 +128,24 @@
     padding-left: 20px
     padding-right: 20px
 
-  .course-nav-modules
+  .course-side-bar
     width: 220px
 
   .static-height
     height: 170px    
 
 @media (min-width: 768px) and (max-width: 979px)
-  .course-nav-modules
+  .course-side-bar
     width: 166px
 
   .static-height
     height: 220px    
 
 @media (max-width: 767px)
-  .course-nav-modules.affix
+  .course-side-bar.affix
     position: inherit
 
-  .course-nav-modules
+  .course-side-bar
     width: 100%
 
   .static-height
