--- a/app/views/courses/_spherification_c.html.haml
+++ b/app/views/courses/_spherification_c.html.haml
@@ -5,7 +5,7 @@
   .row.section
     .span6
       .video-container(ng-cloak=""){:itemscope => true, :itemprop => "video", :itemtype => "http://schema.org/VideoObject", :csenforceaspect => true}
-        %iframe(ng-style="setHeight()" csenforceaspect){src: youtube_url('5Jdq-wmQaPA')}
+        %iframe(ng-style="setHeight()" csenforceaspect){src: youtube_url('QPdO4I3WLHg')}
       .section
         %p= course.description
       %h4.text-center
