--- a/app/views/activities/_course_activity_navigation.html.haml
+++ b/app/views/activities/_course_activity_navigation.html.haml
@@ -41,4 +41,4 @@
   %h4.text-center
     %i.icon-comment-alt
     Comments or Questions?
-    = link_to 'Visit the Forum', 'http://forum.chefsteps.com'
+    = link_to 'Visit the Forum', 'http://forum.chefsteps.com/discussion/698/spherification-course-questions'
