[homepage] update homepage text

--- a/app/views/home/_index_B.html.haml
+++ b/app/views/home/_index_B.html.haml
@@ -6,7 +6,7 @@
 .container
   .row.section
     .span12
-      %h2.text-orange Check out our first free course with more to come&nbsp;...
+      %h2.text-orange Check out our free courses
   .row.section
     - if @courses.any?
       - @courses.each do |course|
