--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1307,8 +1307,9 @@ csingredienteditpair
   margin-top: 10px
   margin-bottom: 10px
 
-.add-item, .done
+.add-item, .add-from-master, .done
   margin-top: -5px
+  height:  20px
 
 .step-edit-buttons, .step-add-button-group, .step-add-button-end-group
   position: absolute
@@ -1335,7 +1336,7 @@ csingredienteditpair
 
 .step-add-button-line
   position: absolute
-  top: 12px
+  top: 10px
   border-top:  1px dotted #d3d3d3
   width: 600px
   z-index: -1
@@ -1345,7 +1346,11 @@ csingredienteditpair
     position:
       bottom: -22px
 
+.select-ingredient-checkbox
+  margin-top: -2px !important
 
+.unselected-ingredient
+  color: #a9a9a9
 
 .fade-hide, .fade-show
   -webkit-transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.25s
