--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -47,7 +47,7 @@
       .span6.relative
         %csEditPair#title-edit-pair
           %csEditPairShow
-            %h1.activity-title(ng-bind-html-unsafe="activity.title || 'Add title...'" itemprop='name' ng-class="disableIf(! activity.title.length)")
+            %h1.activity-title(ng-bind-html-unsafe="activity.title || (editMode && 'Add title...')" itemprop='name' ng-class="disableIf(! activity.title.length)")
             -if @activity.source_activity_id
               %h5(style="font-weight: normal;")
                 {{sourceActivityTypeString()}}
