--- a/app/views/activities/_select_ingredients_from_master.html.haml
+++ b/app/views/activities/_select_ingredients_from_master.html.haml
@@ -5,7 +5,7 @@
     .ingredient-table-row(ng-repeat="ai in possible_ingredients")
 
       %input.select-ingredient-checkbox(type="checkbox" ng-model="ai.included")
-      %div(ng-class="{'unselected-ingredient': !ai.included}")
+      %div(ng-click="ai.included = ! ai.included")
         %span(ng-bind-html-unsafe="ai.ingredient.title")>
         %span(ng-show="!!ai.note" ng-bind-html-unsafe="', ' + (ai.note | shortcode)")>
 
