--- a/app/views/home/_hero_carousel.html.haml
+++ b/app/views/home/_hero_carousel.html.haml
@@ -2,12 +2,23 @@
   .row
     .span12
       - cache @heroes do
+        / .swipe#hero-swiper
+        /   .swipe-wrap
+        /     - @heroes.each_with_index do |hero, index|
+        /       %div{class: "item #{'active' if index == 0}", id: "#{'hero-first' if index == 0}"}
+        /         = render 'shared/media_hero', main_title: hero.activity_type? ? hero.activity_type : 'Recipe', media_object: hero
+        / .swipe-indicators#hero-indicators
+        /   - @heroes.each_with_index do |hero, index|
+        /     .swipe-indicator-btn.hero-indicator-btn{class: "#{'indicator-active' if index == 0}", id: "hero-swipe-indicator-#{index}", data: {target: '#swiper', :'slide-to-index' => index}}
         .swipe#hero-swiper
           .swipe-wrap
+            .item.active#hero-first
+              = render 'spherification_billboard'
             - @heroes.each_with_index do |hero, index|
-              %div{class: "item #{'active' if index == 0}", id: "#{'hero-first' if index == 0}"}
+              .item
                 = render 'shared/media_hero', main_title: hero.activity_type? ? hero.activity_type : 'Recipe', media_object: hero
         .swipe-indicators#hero-indicators
+          .swipe-indicator-btn.hero-indicator-btn.indicator-active#hero-swipe-indicator-0{data: {target: '#swiper', :'slide-to-index' => 0}}
           - @heroes.each_with_index do |hero, index|
-            .swipe-indicator-btn.hero-indicator-btn{class: "#{'indicator-active' if index == 0}", id: "hero-swipe-indicator-#{index}", data: {target: '#swiper', :'slide-to-index' => index}}
+            .swipe-indicator-btn.hero-indicator-btn{id: "hero-swipe-indicator-#{index + 1}", data: {target: '#swiper', :'slide-to-index' => index + 1}}
   %hr
