--- a/app/assets/stylesheets/print.css.sass
+++ b/app/assets/stylesheets/print.css.sass
@@ -108,3 +108,10 @@
     padding-top: 50px
     padding-bottom: 0px
     height: auto
+
+  .edit-pair-edit
+    display: none !important
+
+  a[href]:after
+    content: ""
+
