--- a/app/views/activities/_metadata.html.haml
+++ b/app/views/activities/_metadata.html.haml
@@ -1,6 +1,4 @@
-.meta-edit.well
-
-
+.meta-edit.well.noprint
   %h6 Activity Type
   .btn-toolbar
     %button.btn(ng-repeat="actType in activityTypes" type="button" ng-click="toggleActivityType(actType)" ng-class="{active: hasActivityType(actType)}")
