[billboard] final touches

--- a/app/views/home/_spherification_billboard.html.haml
+++ b/app/views/home/_spherification_billboard.html.haml
@@ -9,6 +9,8 @@
         from some of the
       .heading4
         best chefs in the world
+      .heading5.section
+        = link_to 'START NOW', 'courses/spherification', class: 'btn btn-primary btn-large'
 
   .background
     %video{loop: 'loop', autoplay: 'autoplay'}
