--- a/app/assets/stylesheets/billboard.css.sass
+++ b/app/assets/stylesheets/billboard.css.sass
@@ -1,3 +1,5 @@
+@import 'mixins'
+
 .billboard-spherification
   position: relative
   .foreground
@@ -7,7 +9,7 @@
     width: 100%
     .text-content
       width: 40%
-      margin: 5% 30%
+      margin: 13% 30%
       font-size: 36px
       line-height: 36px
       .heading1
@@ -27,6 +29,10 @@
         font-weight: 500
         font-size: 35px
         letter-spacing: 4px
+      .heading5
+        font-weight: 500
+        text-align: center
+
   .background
     height: 541px
     video
