[billboard] update animation

--- a/app/assets/stylesheets/_mixins.css.sass
+++ b/app/assets/stylesheets/_mixins.css.sass
@@ -35,6 +35,12 @@
   -webkit-transition: $value
   -o-transition: $value
 
+=animation($value)
+  animation: $value
+  -moz-animation: $value
+  -webkit-animation: $value
+  -o-animation: $value
+
 /* Colors */
 $orange: #e25f25
 //$orange: #DB7354
