--- a/app/views/home/_spherification_billboard.html.haml
+++ b/app/views/home/_spherification_billboard.html.haml
@@ -1,15 +1,15 @@
-.billboard-spherification
+#billboard-spherification
   .foreground
     .text-content
-      .heading1
+      .billboard-heading.heading1
         Learn All About
-      .heading2
+      .billboard-heading.heading2
         Spherification
-      .heading3
+      .billboard-heading.heading3
         from some of the
-      .heading4
+      .billboard-heading.heading4
         best chefs in the world
-      .heading5.section
+      .billboard-heading.heading5.section
         = link_to 'START NOW', 'courses/spherification', class: 'btn btn-primary btn-large'
 
   .background
