--- a/app/assets/stylesheets/billboard.css.sass
+++ b/app/assets/stylesheets/billboard.css.sass
@@ -77,4 +77,55 @@
   100%
     opacity: 1
 
+// RESPONSIVE //
+@media (min-width: 1200px)
+
+@media (max-width: 1200px)
+  #billboard-spherification
+    .foreground
+      .text-content
+        width: 50%
+        margin: 15% 25%
+    .background
+      height: 529px
+      video
+        margin-top: 0px
+
+@media (min-width: 768px) and (max-width: 979px)
+  #billboard-spherification
+    .foreground
+      .text-content
+        width: 66%
+        margin: 15% 17%
+    .background
+      height: 407px
+      video
+        margin-top: 0px
+
+@media (max-width: 767px)
+  #billboard-spherification
+    .foreground
+      .text-content
+        width: 100%
+        margin: 5% 0px
+        font-size: 16px
+        line-height: 18px
+        letter-spacing: 1px
+        text-align: center
+        .heading1
+          font-size: 16px
+          letter-spacing: 1px
+        .heading2
+          font-size: 16px
+          letter-spacing: 1px
+        .heading3
+          font-size: 16px
+          letter-spacing: 1px
+        .heading4
+          font-size: 16px
+          letter-spacing: 1px
+    .background
+      height: inherit
+      video
+        margin-top: 0px
 
