better mouse handling

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1042,6 +1042,9 @@ h4
 .scroll-shadow-wrapper
   position: relative
 
+.scroll-shadow-content
+  width: 100%
+
 .scroll-shadow-horizontal
   height: 180px
   overflow-x: auto
