--- a/app/views/user_profiles/show.html.haml
+++ b/app/views/user_profiles/show.html.haml
@@ -78,7 +78,10 @@
             - @user.events.timeline.in_groups_of(2).map(&:last).compact.each do |event|
               = render "events/#{event.trackable_type.underscore}/#{event.action}", event: event, direction: 'right'
         .text-center
-          %h4= "You joined ChefSteps on"
+          - if current_user == @user
+            %h4= "You joined ChefSteps on"
+          - else
+            %h4= "#{@user.name} joined ChefSteps on"
           %h4= "#{@user.created_at.strftime('%B %-d, %Y')}."
 
         / - @user.events.timeline.each_with_index do |event, index|
