--- a/app/views/events/upload/_create.html.haml
+++ b/app/views/events/upload/_create.html.haml
@@ -1,8 +1,9 @@
 - direction = direction || 'left'
+- user_noun = current_user == event.user ? 'You' : event.user.name
 .timeline-circle{data: {direction: direction}}
   .timeline-circle-img
     = link_to user_upload_path(event.trackable.user, event.trackable) do
       = image_tag filepicker_circle_image(event.trackable.image_id), class: 'img-circle'
   .timeline-circle-text.text-center
-    %div You uploaded a photo
+    %div= "#{user_noun} uploaded a photo"
     %div= time_ago_in_words(event.created_at) + ' ago'
