--- a/app/views/activities/_main_activity_content.html.haml
+++ b/app/views/activities/_main_activity_content.html.haml
@@ -196,4 +196,10 @@
       .scroll-overlay-top
       .scroll-overlay-bottom
 
+-# Turn this on if you want to see the whole data structure for debugging
+  .row
+    .span12
+      %pre
+        {{activity | json}}
+
 
