[hack] for anchortags on spherification

--- a/app/views/courses/_spherification_a.html.haml
+++ b/app/views/courses/_spherification_a.html.haml
@@ -58,7 +58,7 @@
       %h2
         Buy a kit to help you get started
 
-.container
+.container#creative
   .row.section
     .span6
       / = image_tag 'https://www.filepicker.io/api/file/cFWqOq07TTyCzGPhs6Kn'
@@ -81,7 +81,7 @@
 
 
 %hr
-.container
+.container#enthusiast
   .row.section
     .span6
       / = image_tag 'https://www.filepicker.io/api/file/kBzOoRGkRsmpKSZPg9fg'
@@ -103,7 +103,7 @@
         = buy_now(Course::SPHERIFICATION_ENTHUSIAST[:variant_id], Course::SPHERIFICATION_ENTHUSIAST[:price])
 
 %hr
-.container
+.container#professional
   .row.section
     .span6
       /= image_tag 'https://www.filepicker.io/api/file/gV7vpXwSXi4eqHfOf1ED'
