--- a/app/views/courses/_spherification_c.html.haml
+++ b/app/views/courses/_spherification_c.html.haml
@@ -53,7 +53,7 @@
         
 %hr
 
-.container
+.container#creative
   .row.section
     .span11.offset1
       %h3.orange= "The Creative Kit"
@@ -75,7 +75,7 @@
       = buy_now(Course::SPHERIFICATION_CREATIVE[:variant_id], Course::SPHERIFICATION_CREATIVE[:price])
 
 %hr
-.container
+.container#enthusiast
   .row.section
     .span11.offset1
       %h3.orange= "The Enthusiast Kit"
@@ -97,7 +97,7 @@
 
 
 %hr
-.container
+.container#professional
   .row.section
     .span11.offset1
       %h3.orange= "The Professional Kit"
