[spherification] spheres billboard content and css updates

--- a/app/views/home/_spherification_billboard.html.haml
+++ b/app/views/home/_spherification_billboard.html.haml
@@ -2,13 +2,13 @@
   .foreground
     .text-content
       .billboard-heading.heading1
-        Learn All About
+        Create spheres   
       .billboard-heading.heading2
-        Spherification
+        that burst with flavor
       .billboard-heading.heading3
-        from some of the
+        surprise and delight
       .billboard-heading.heading4
-        best chefs in the world
+        family and friends
       .billboard-heading.heading5.section
         = link_to 'START NOW', 'courses/spherification', class: 'btn btn-primary btn-large'
 
