--- a/app/views/client_views/_ingredient_edit_pair.html.haml
+++ b/app/views/client_views/_ingredient_edit_pair.html.haml
@@ -24,4 +24,9 @@
       %input(csselectonfocus="" csinputmonkeyingredient="" type="text" placeholder="New ingredient" typeahead-editable="true" autocomplete="off" class="ingredient-typeahead" ng-model="ai.ingredient" typeahead="i as i.title for i in all_ingredients($viewValue)")
       %input(csselectonfocus="" type="text" placeholder="note" autocomplete="off" ng-model="ai.note")
     %input.quantity-group(csselectonfocus="" type="text" placeholder="qty" autocomplete="off" ng-model="ai.display_quantity")
-    %select.unit(type="text" ng-model="ai.unit" required="true" ng-options="u for u in ['g', 'kg', 'ea', 'a/n', 'recipe']")
+    .unit
+      -# http://stackoverflow.com/questions/5912791/how-to-remove-the-arrow-from-a-select-tag-in-firefox - my favorite answer (not the accepted one)
+      .select-readout(ng-class="{fakefocus: ingredientSelectHasFocus}")
+        {{ai.unit}}
+        %i.icon-caret-down
+      %select(type="text" ng-model="ai.unit" required="true" ng-options="u for u in ['g', 'kg', 'ea', 'a/n', 'recipe']")
